# scienctifc-python-template

./: construct.yaml  environment.yaml  environment.yml  pyproject.toml
.github/workflows/: constructor.yaml  release.yaml
