[tool.poetry]
name = "science"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "science", from="src"}]


[tool.poetry.dependencies]
python = "^3.6"
pip = "^23.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
